--- a/test/fixtures/reviews.yml
+++ b/test/fixtures/reviews.yml
@@ -12,16 +12,16 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 review_for_primus_1:
-#  reviewer: parker
+  reviewer: parker
   body: good nose
   wine: primus
 
 review_for_primus_2:
-#  reviewer: wine_spectator
+  reviewer: wine_spectator
   body: clean
   wine: primus
 
 review_for_cabernet:
-#  reviewer: wine_spectator
+  reviewer: wine_spectator
   body: long finish
   wine: cabernet
