added active to Wines, Reviews and Users.
enabled toggling of User's active/inactive state from browser.

added update callback to inactive user's reviews after user is inactivated.

--- a/test/fixtures/wines.yml
+++ b/test/fixtures/wines.yml
@@ -10,6 +10,7 @@
 #  item_no    :integer(4)      not null
 #  created_at :datetime        not null
 #  updated_at :datetime        not null
+#  active     :boolean(1)      default(TRUE)
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
